--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
     filter: orange 30%;
     background-size: cover;
     background-position: 50%;
-    width: 1920px;
+    width: 100%;
     height: 558px;
    
 
@@ -55,15 +55,17 @@ h1 {
 
 }
 
-button{
-    transform: translateX(830px);
-    width: 125.71px;
+.srch{
+    margin-left: 43%;
+    width: 7%;
     height: 34.98px; 
     border-radius: 10px;
 }
 
 .sign {
     background-color: transparent;
+    width: 7%;
+    height: 34.98px; 
     border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 10px;
@@ -75,7 +77,7 @@ button{
 
 .card {
     float: left;
-    width: 440px;
+    width: 22.9%;
     height: 489px;
     background-color: #ebf6fa;
     border-radius: 10px;
@@ -111,9 +113,11 @@ button{
 }
 
 img {
-    width: 370px;
+    width: 85%;
     height: 237px;
     margin-top: 29px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
 }
+
+
