--- a/css/index.css
+++ b/css/index.css
@@ -13,14 +13,16 @@ body {
     background-position: 50%;
     width: 100%;
     height: 558px;
-   
-
+    
+  
 }
 
+
 .navbar {
-    margin-left: 659px;
+    margin-left: 649px;
     padding-top: 20px;
     font-family: 'Roboto', sans-serif;
+    font-size: 15px;
     
 }
 li{
@@ -31,7 +33,7 @@ li{
 }
 
 .nav{
-    margin-left: 50px;
+    margin-left: 60px;
 }
 
 h1 span{
@@ -51,8 +53,13 @@ h1 {
     font-weight: 300;
     font-size: 52px;
     line-height: 65px;
+    
+  
 
 }
+
+
+
 
 .srch{
     margin-left: 43%;
@@ -82,6 +89,7 @@ h1 {
     border-radius: 10px;
     text-align: center;
     margin-top: 43px;
+    
     
 }
 
@@ -117,6 +125,5 @@ img {
     margin-top: 29px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
+    
 }
-
-
