--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -1,11 +1,23 @@
 body{
-    margin : 0;
+   
     position: relative;
     top: 50px;
-    background: rgba(234, 192, 46, 0.2) url(../img/bg-beach\(filtered\).png);
-    background-size: 100%;
+    padding: 0px;
+   
    
     
+}
+
+.bg img{
+    min-height: 100%;
+    min-width: 100%;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    margin: 0px;
 }
 
 .menu{
