--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -24,12 +24,19 @@ body{
     text-align: center;
     margin-bottom: 81px;
 }
-.menu li{
+.menu a{
     padding-left: 62px;
     display: inline;
     font-family: 'Roboto', sans-serif;
+    color: rgba(0, 0, 0, 0.5);
 }
 
+
+a:link {
+    color:black;
+    background-color: transparent;
+    text-decoration: none;
+  }
 
 .titlepage{ 
     position: relative;
