--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -36,7 +36,11 @@ a:link {
     color:black;
     background-color: transparent;
     text-decoration: none;
-  }
+}
+
+a:hover {
+	font-weight: bold;
+}
 
 .titlepage{ 
     position: relative;
