--- a/css/destination.css
+++ b/css/destination.css
@@ -45,10 +45,11 @@ ul {
 
 input {
     background-color: rgb(196, 196, 196, 1);
-    width: 300px;
-    height: 25px;
+    width: 35%;
+    padding-left: 30px;
+    height: 40px;
     border: none;
-    border-radius: 20px;
+    border-radius: 48px;
 }
 
 button {
@@ -57,8 +58,8 @@ button {
 
 .icon {
     width: 20px;
-    height: 20px;
-    border-radius: 20px;
+    height: 19px;
+    border: none;
 }
 
 .search {
@@ -67,7 +68,7 @@ button {
     margin: 0 auto;
     border: none;
     width: 75%;
-    height: 75%;
+    height: 50px;
     margin-top: 20px;
     padding: 30px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -107,6 +108,8 @@ select {
     background-color: #ebf6fa;
     border-radius: 10px;
     text-align: center;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
 }
 
 .rate {
@@ -141,7 +144,7 @@ p {
     font-family: 'Rasa', serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 10px;
+    font-size: 14px;
     line-height: 10px;
 }
 
