--- a/css/history.css
+++ b/css/history.css
@@ -16,7 +16,7 @@ body {
 
 nav {
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 81px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
@@ -49,7 +49,7 @@ ul {
     border: none;
     width: 75%;
     height: 75%;
-    margin-top: 20px;
+    margin-top: 25px;
     padding: 30px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     z-index: 1;
@@ -59,8 +59,8 @@ ul {
     background-color: #D5E6E0;
     position: relative;
     margin: 0 auto;
-    width: 1551;
-    height: 1178;
+    width: 80.9%;
+    height: 1214px;
     border: none;
     width: 75%;
     height: 75%;
@@ -72,43 +72,53 @@ ul {
 .card {
     display: table;
     margin: 0 auto;
-    width: 350px;
+    width: 489px;
     background-color: #ebf6fa;
     border-radius: 10px;
     text-align: center;
 }
 
 .rate {
-    margin: 0;
-    width: 80px;
-    height: 20px;
+    margin: 10px;
+    width: 120px;
+    height: 30px;
     border: none;
 } 
 
 img {
-    width: 627px;
-    height: 357px;
+    width: 787px;
+    height: 457px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
 }
 
 h1 {
     text-align: left;
-    margin: 10px;
+    margin: 20px;
     font-family: 'Rancho', cursive;
     font-style: normal;
-    font-size: 28px;
-    line-height: 10px;
+    font-size: 48px;
+    line-height: 20px;
 }
 
 h2 {
     text-align: center;
-    margin: 5px;
+    margin: 10px;
     font-family: 'Rancho', cursive;
     font-style: normal;
     font-weight: bold;
+    font-size: 40px;
+    line-height: 20px;
+}
+
+p {
+    text-align: center;
+    margin: 20px;
+    font-family: 'Rasa', serif;
+    font-style: normal;
+    font-weight: normal;
     font-size: 20px;
-    line-height: 10px;
+    line-height: 20px;
 }
 
 @media screen and (min-width: 992px) {
