--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,35 @@ img {
     box-sizing: border-box;
     
 }
+
+@media screen and (min-width: 450px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (min-width: 768px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (min-width: 992px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (max-width: 1000px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
