--- a/css/SignUp.css
+++ b/css/SignUp.css
@@ -164,4 +164,34 @@ table {
     background-color: #dddddd;
   }
 
-  
+  @media screen and (min-width: 450px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (min-width: 768px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (min-width: 992px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (max-width: 1000px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
