--- a/css/community.css
+++ b/css/community.css
@@ -130,7 +130,31 @@ p {
     line-height: 35px;
 }
 
+@media screen and (min-width: 450px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (min-width: 768px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
 @media screen and (min-width: 992px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (max-width: 1000px) {
     header,
     body {
 		width: 100%;
