--- a/css/destination2.css
+++ b/css/destination2.css
@@ -173,7 +173,31 @@ p {
     line-height: 20px;
 }
 
+@media screen and (min-width: 450px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (min-width: 768px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
 @media screen and (min-width: 992px) {
+    header,
+    body {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+@media screen and (max-width: 1000px) {
     header,
     body {
 		width: 100%;
