--- a/css/destination.css
+++ b/css/destination.css
@@ -95,6 +95,7 @@ select {
     border-radius: 20px;
     margin: 10px;
     padding-left: 10px;
+    display: block;
 }
 
 .card {
@@ -122,6 +123,16 @@ img {
     height: 110px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
+}
+
+.klik {
+    text-align: left;
+    margin: 5px;
+    font-family: 'Rancho', cursive;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 10px;
 }
 
 h1 {
