--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,15 @@
 
-
-
 body {
     background-color: #D5E6E0;
-    
+    margin: 0;    
 }
-
 
 .bagianatas {
     background: url(../img/bg-beach\(filtered\).png);
     background-size: cover;
     background-position: 50%;
     width: 100%;
-    height: 558px;
-    
-  
+    height: 558px;  
 }
 
 a:hover {
@@ -26,20 +21,19 @@ a:hover {
     padding-top: 20px;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    
 }
+
 .navbar a{
     display: inline;
     color: rgba(0, 0, 0, 0.5);
     font-family: 'Roboto';
-
 }
 
 .navbar a:link {
     color:black;
     background-color: transparent;
     text-decoration: none;
-  }
+}
 
 .nav{
     margin-left: 60px;
@@ -62,13 +56,7 @@ h1 {
     font-weight: 300;
     font-size: 52px;
     line-height: 65px;
-    
-  
-
 }
-
-
-
 
 .srch{
     margin-left: 43%;
@@ -93,11 +81,6 @@ h1 {
     color: black;
 }
 
-
-
-
-
-
 .card {
     float: left;
     width: 22.9%;
@@ -106,8 +89,6 @@ h1 {
     border-radius: 10px;
     text-align: center;
     margin-top: 43px;
-    
-    
 }
 
 .bagianbawah::after{
@@ -122,11 +103,7 @@ h1 {
     font-weight: bold;
     font-size: 24px;
     line-height: 30px;
-
-
-
 }
-
 
 .bagianbawah p{
     font-family: 'Rasa', serif;
@@ -142,7 +119,6 @@ img {
     margin-top: 29px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
-    
 }
 
 @media screen and (min-width: 450px) {
