--- a/css/destination2.css
+++ b/css/destination2.css
@@ -45,10 +45,11 @@ ul {
 
 input {
     background-color: rgb(196, 196, 196, 1);
-    width: 300px;
-    height: 25px;
+    width: 35%;
+    padding-left: 30px;
+    height: 40px;
     border: none;
-    border-radius: 20px;
+    border-radius: 48px;
 }
 
 button {
@@ -57,9 +58,10 @@ button {
 
 .icon {
     width: 20px;
-    height: 20px;
-    border-radius: 20px;
+    height: 19px;
+    border: none;
 }
+
 
 .search {
     background-color: #ebf6fa;
@@ -67,7 +69,7 @@ button {
     margin: 0 auto;
     border: none;
     width: 75%;
-    height: 75%;
+    height: 50px;
     margin-top: 20px;
     padding: 30px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -85,7 +87,7 @@ button {
     height: 75%;
     padding: 30px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    z-index: -1;
+    
 }
 
 .card {
