--- a/css/community.css
+++ b/css/community.css
@@ -67,12 +67,13 @@ ul {
 
 .abuAbu {
     background: rgba(189, 189, 189, 1);
-    position: relative;
+    
     margin: 0 auto;
     border: none;
     width: 75%;
     height: 75%;
     padding: 30px;
+   
     z-index: -1;
 }
 
@@ -87,7 +88,8 @@ table {
 }
 
 .img-sponsor {
-    margin: 40px;
+    align-items: center;
+    margin: 60px;
     display: inline;
 }
 
