--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,11 @@ body {
 }
 
 .bagianatas {
-    background: url(../img/bg-beach\(filtered\).png);
+    background: url(/img/bg-beach\(filtered\).jpg);
     background-size: cover;
     background-position: 50%;
     width: 100%;
-    height: 558px;  
+    height: 500px;  
 }
 
 a:hover {
@@ -46,7 +46,7 @@ h1 span{
     text-align: center;
     font-size: 72px;
     line-height: 90px;
-    margin-top: 130px;
+    margin-top: 100px;
 }
 
 h1 {
@@ -82,15 +82,73 @@ h1 {
     color: black;
 }
 
+
+.kiri{
+    
+	height: 50px;
+    width: 483px;
+    position: absolute;
+
+
+}
+
+.kiri h1{
+    text-align: left;
+    margin-left: 53px; 
+    color: black; 
+    font-family: Lobster;
+    font-size: 120px;"
+}
+
+
+.awal{
+    position: absolute;
+    left: 872px;
+    top: 500px;
+    color: white;
+    font-family: Lobster;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 60px;  
+}
+
+.isi{
+    position: absolute; ;
+    width: 851px;
+    height: 266px;
+    left: 872px;
+    top: 650px;
+
+    font-family: Lobster;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 30px;
+
+    color: #FFFCFC;
+}
+
 .card {
     float: left;
     width: 22.9%;
     height: 489px;
-    background-color: #ebf6fa;
+    background-color: #3387C3;
     border-radius: 10px;
     text-align: center;
     margin-top: 43px;
+    margin-bottom: 45px;
+    filter: drop-shadow(9px 10px 5px rgba(0, 0, 0, 0.33));
 }
+
+.card p {
+    color: white;
+}
+.card h3{
+    color: white;
+}
+
+
 
 .bagianbawah::after{
     content: "";
@@ -112,6 +170,15 @@ h1 {
     font-weight: normal;
     font-size: 19px;
     line-height: 23px;
+}
+
+.header h1 {
+    font-family: Lobster; 
+    position: absolute;
+    margin-left: 40%; 
+    margin-top: 60px; 
+    font-size: 64px; 
+    color: white;
 }
 
 img {
