--- a/css/destination2.css
+++ b/css/destination2.css
@@ -97,8 +97,10 @@ button {
     border-radius: 10px;
 }
 
+.detail {
+}
+
 .rate {
-    float: left;
     margin: 0;
     width: 90px;
     height: 20px;
@@ -106,7 +108,6 @@ button {
 }
 
 .rate2 {
-    float: left;
     margin: 0;
     width: 60px;
     height: 15px;
