--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -42,7 +42,7 @@ a:hover {
     position: relative;
     z-index: 1;
     margin-left: 10.9%;
-    background: #EBF6FA;
+    background: #3387c3;
     width: 80.9%;
     height: 140px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -60,7 +60,7 @@ a:hover {
     text-align: left;
     width: 80.9%;
     height: 1214px;
-    background: #D5E6E0;
+    background: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 10.9%;
     padding-top: 20px;
@@ -70,24 +70,32 @@ a:hover {
     margin-top: 25px;
 }
 
-.card {
+.card  {
     width: 28.4%;
     height: 489px;
-    background-color: #ebf6fa;
     border-radius: 10px;
-    text-align: center;
+    text-align: left;
     margin-left: 3.8%;
     margin-top: 63px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     float: left;
 }
 
+.card p{
+    background-color: #c4c4c4;
+    width: 84px;
+    height: 21px;
+    color: #8e7e7e;
+    padding-left: 10px;
+    font-size: 18px;
+    font-family: 'Rancho', cursive;
+
+}
+
 img{
-    width: 85%;
-    height: 356px;
+    
     margin-top: 29px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
+  
 }
 
 @media screen and (min-width: 450px) {
