--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -1,7 +1,7 @@
 body{   
-    position: relative;
-    top: 50px;
-    padding: 0px; 
+    
+    
+    
 }
 
 .bg img{
@@ -16,18 +16,29 @@ body{
     margin: 0px;
 }
 
-.menu{
-    text-align: center;
-    margin-bottom: 81px;
-}
-
-.menu a{
-    padding-left: 62px;
-    display: inline;
+.navbar {
+    margin-left: 649px;
+    padding-top: 20px;
     font-family: 'Roboto', sans-serif;
-    color: rgba(0, 0, 0, 0.5);
+    font-size: 15px;
+    
 }
 
+.navbar a{
+    display: inline;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: 'Roboto';
+}
+
+.navbar a:link {
+    color:black;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+.nav{
+    margin-left: 60px;
+}
 a:link {
     color:black;
     background-color: transparent;
@@ -46,6 +57,7 @@ a:hover {
     width: 80.9%;
     height: 140px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 79px;
 }
 
 .titlepage h1{
@@ -98,34 +110,33 @@ img{
   
 }
 
-@media screen and (min-width: 450px) {
-    header,
-    body {
-		width: 100%;
-		padding: 0;
-	}
+.bawahsendiri{
+    background-color: #2B8E9C;
+    padding-top: 1px;
+    width: auto;
+    height: auto;
+   
+    
 }
 
-@media screen and (min-width: 768px) {
-    header,
-    body {
-		width: 100%;
-		padding: 0;
-	}
+.bawahsendiri p{
+    color: white; 
+    font-family: Rasa;
+    font-size: 24px;
+    margin-left: 35px;
+    
 }
 
-@media screen and (min-width: 992px) {
-    header,
-    body {
-		width: 100%;
-		padding: 0;
-	}
+.bawahsendiri img{
+    margin-left: 35px;
+    margin-bottom: 41px;
 }
 
-@media screen and (max-width: 1000px) {
-    header,
-    body {
-		width: 100%;
-		padding: 0;
-	}
+.contact{
+    position: absolute;
+    left: 1300px;
+    top: 1490px;
+    z-index: 2;
 }
+
+
