--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ h1 {
     margin-left: 53px; 
     color: black; 
     font-family: Lobster;
-    font-size: 120px;"
+    font-size: 120px;
 }
 
 
@@ -133,7 +133,7 @@ h1 {
     float: left;
     width: 22.9%;
     height: 489px;
-    background-color: #3387C3;
+    background-color: #A2CDEC;
     border-radius: 10px;
     text-align: center;
     margin-top: 43px;
