--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -53,7 +53,7 @@ a:hover {
     position: relative;
     z-index: 1;
     margin-left: 10.9%;
-    background: #3387c3;
+    background: #A2CDEC;
     width: 80.9%;
     height: 140px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -138,5 +138,4 @@ img{
     top: 1490px;
     z-index: 2;
 }
-
 
