--- a/css/community.css
+++ b/css/community.css
@@ -5,8 +5,7 @@
 body {
     margin: 0;
     position: relative;
-    background: url(../img/bg-beach\(filtered\).png);
-    filter: orange 30%;
+    background: url(../img/bg-beachblue.jpg);
     background-size: cover;
     background-position: 100%;
     background-repeat: no-repeat;
@@ -42,8 +41,8 @@ ul {
 	list-style-type: none;
 }
 
-.biruMuda {
-    background-color: #ebf6fa;
+.biruTua {
+    background-color: #A2CDEC;
     position: relative;
     margin: 0 auto;
     border: none;
@@ -54,7 +53,7 @@ ul {
     z-index: 1;
 }
 
-.biruTua {
+.biruMuda {
     background-color: #D5E6E0;
     position: relative;
     margin: 0 auto;
@@ -67,30 +66,36 @@ ul {
 
 .abuAbu {
     background: rgba(189, 189, 189, 1);
-    
     margin: 0 auto;
     border: none;
     width: 75%;
     height: 75%;
     padding: 30px;
-   
     z-index: -1;
+    margin-bottom: 100px;
 }
 
 .profile {
     width: 386px;
     height: 417px;
+    float: left;
+    margin-right: 30px;
 }
 
-table {
+.biruMuda h2 {
     margin: 0 auto;
-    padding: 20px;
 }
 
-.img-sponsor {
+.biruMuda p {
+    display: inline-block;
+    text-align: center;
+    margin: 20px 30px 10px 0;
+}
+
+.abuAbu img {
     align-items: center;
-    margin: 60px;
-    display: inline;
+    margin: 20px 40px 20px 40px;
+    display: inline-block;
 }
 
 .sponsor {
@@ -131,6 +136,33 @@ p {
     font-size: 32px;
     line-height: 35px;
 }
+
+/**
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    contenteditable attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that are clearfixed.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+ .cf:before,
+ .cf:after {
+     content: " "; /* 1 */
+     display: table; /* 2 */
+ }
+ 
+ .cf:after {
+     clear: both;
+ }
+ 
+ /**
+  * For IE 6/7 only
+  * Include this rule to trigger hasLayout and contain floats.
+  */
+ .cf {
+     *zoom: 1;
+ }
 
 @media screen and (min-width: 450px) {
     header,
