--- a/css/history.css
+++ b/css/history.css
@@ -5,8 +5,7 @@
 body {
     margin: 0;
     position: relative;
-    background: url(../img/bg-beach\(filtered\).png);
-    filter: orange 30%;
+    background: url(../img/bg-beachblue.jpg);
     background-size: cover;
     background-position: 100%;
     background-repeat: no-repeat;
@@ -41,7 +40,7 @@ ul {
 }
 
 .bar {
-    background-color: #ebf6fa;
+    background-color: #A2CDEC;
     position: relative;
     margin: 0 auto;
     border: none;
@@ -65,13 +64,14 @@ ul {
     padding: 30px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     z-index: -1;
+    margin-bottom: 100px;
 }
 
 .card {
     display: table;
     margin: 0 auto;
     width: 489px;
-    background-color: #ebf6fa;
+    background-color: #A2CDEC;
     border-radius: 10px;
     text-align: center;
 }
