--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -72,7 +72,7 @@ a:hover {
     text-align: left;
     width: 80.9%;
     height: 1214px;
-    background: #ffffff;
+    background: #D5E6E0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 10.9%;
     padding-top: 20px;
