--- a/css/SignUp.css
+++ b/css/SignUp.css
@@ -47,7 +47,7 @@ a:link {
     position: relative;
     z-index: 1;
     margin-left: 10.9%;
-    background: #EBF6FA;
+    background: #A2CDEC;
     width: 83%;
     height: 140px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -73,7 +73,8 @@ a:link {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 10.9%;
     padding: 20px;
-    
+    margin-bottom: 100px;
+    padding-bottom: 50px;
 
 
 }
