--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,141 @@ a:hover {
     margin-left: 60px;
 }
 
+.modal{
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.modalcontent {
+    margin: 10% auto; /* 15% from the top and centered */
+    background-color:#A2CDEC;
+    width: 40%; 
+    ;
+}
+
+.modalheader{
+  padding: 1px 10px;
+  background-color: #A2CDEC ;
+}
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+    
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 24px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+    font-family: Rancho;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+
 h1 span{
     display: block;
     font-family: 'Lobster';
@@ -69,6 +204,37 @@ h1 {
     color: black;
 }
 
+.footer{
+  width: 100%;
+  background-color: #2B8E9C;
+  padding: 10px 0px;
+  text-align: center;
+  align-items: center;
+  display: flexbox;
+}
+
+.footer a{
+  display: inline;
+  color: rgba(0, 0, 0, 0.5);
+  font-family: 'Lobster';
+  background-color: white;
+  
+}
+
+.buttonjo{
+  background-color: #A2CDEC; 
+  width: 10%; 
+  margin-left: 45%;
+  padding: 5px 5px 5px 5px;
+  border-radius: 5px;
+}
+
+.footer a:link{
+  color:black;
+  background-color: transparent;
+  text-decoration: none;
+}
+
 .sign {
     background-color: transparent;
     width: 7%;
@@ -77,11 +243,15 @@ h1 {
     border-radius: 10px;
     padding: 10px 10px;
     text-align: center;
+    cursor: pointer;
     text-decoration: none;
     display: inline-block;
     color: black;
 }
 
+.sign:hover{
+  font-weight: bold;
+}
 
 .kiri{
     
