--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ a:hover {
 }
 
 .modalcontent {
-    margin: 10% auto; /* 15% from the top and centered */
+    margin: 10% auto; 
     background-color:#A2CDEC;
     width: 40%; 
     ;
@@ -63,20 +63,19 @@ a:hover {
   padding: 1px 10px;
   background-color: #A2CDEC ;
 }
-/* Slideshow container */
+
 .slideshow-container {
     max-width: 1000px;
     position: relative;
     margin: auto;
     
   }
-  
-  /* Hide the images by default */
+ 
   .mySlides {
     display: none;
   }
   
-  /* Next & previous buttons */
+ 
   .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -92,18 +91,18 @@ a:hover {
     user-select: none;
   }
   
-  /* Position the "next button" to the right */
+  
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
-  /* On hover, add a black background color with a little bit see-through */
+ 
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
   
-  /* Caption text */
+ 
   .text {
     color: #f2f2f2;
     font-size: 24px;
@@ -115,7 +114,7 @@ a:hover {
     font-family: Rancho;
   }
   
-  /* Number text (1/3 etc) */
+
   .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -124,7 +123,7 @@ a:hover {
     top: 0;
   }
   
-  /* The dots/bullets/indicators */
+ 
   .dot {
     cursor: pointer;
     height: 15px;
@@ -140,7 +139,7 @@ a:hover {
     background-color: #717171;
   }
   
-  /* Fading animation */
+
   .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
