--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -54,7 +54,7 @@ a:hover {
     z-index: 1;
     margin-left: 10.9%;
     background: #A2CDEC;
-    color: #black;
+    color: #FBFBFB;
     width: 80.9%;
     height: 140px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -73,7 +73,7 @@ a:hover {
     text-align: left;
     width: 80.9%;
     height: auto;
-    background: #D5E6E0;
+    background: #FBFBFB;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 10.9%;
     padding: 50px 0px;
@@ -85,7 +85,7 @@ a:hover {
 }
 
 .card  {
-    margin-left: 4%;
+    margin-left: 1%;
     margin-top: 63px;
     width: auto;
     height: auto;
@@ -148,7 +148,7 @@ a:hover {
 .slider{
     overflow: hidden;
     width: 773px;
-    height: 439px;
+    height: 499px;
     
     
 }
@@ -244,4 +244,18 @@ a:hover {
 #radio3:checked ~ .navauto .nav-btn3{
     background: black;
     
+}
+
+.cap{
+    height: 70px; 
+    padding-top: 40px;
+    text-align: center;
+    background-color: #A2CDEC;
+    margin-top: -40px;
+}
+
+.cap p{
+    margin-top: 10px; 
+    font-family: rancho;
+    font-size: 2em;
 }
