--- a/css/history.css
+++ b/css/history.css
@@ -53,7 +53,7 @@ ul {
 }
 
 .container {
-    background-color: #D5E6E0;
+    background-color: #FBFBFB;
     position: relative;
     margin: 0 auto;
     width: 80.9%;
