--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -54,7 +54,7 @@ a:hover {
     z-index: 1;
     margin-left: 10.9%;
     background: #A2CDEC;
-    color: #FBFBFB;
+    color: black;
     width: 80.9%;
     height: 140px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
