--- a/css/destination.css
+++ b/css/destination.css
@@ -74,7 +74,7 @@ button {
 }
 
 .container {
-    background-color: #D5E6E0;
+    background-color:#FBFBFB;
     position: relative;
     margin: 0 auto;
     border: none;
