--- a/css/destination2.css
+++ b/css/destination2.css
@@ -75,7 +75,7 @@ button {
 }
 
 .container {
-    background-color: #D5E6E0;
+    background-color: #FBFBFB;
     position: relative;
     margin: 0 auto;
     width: 1551;
@@ -101,7 +101,7 @@ button {
 .card {
     display: table;
     margin: 5px;
-    width: 350px;
+    width: 100%;
     background-color: #A2CDEC;
     border-radius: 10px;
 }
@@ -194,6 +194,10 @@ p {
     line-height: 20px;
 }
 
+.Penginapan{
+    display: flex;
+}
+
 /**
  * For modern browsers
  * 1. The space content is one way to avoid an Opera bug when the
@@ -219,6 +223,21 @@ p {
   */
  .cf {
      *zoom: 1;
+ }
+
+
+ .line{
+    width: 80%; 
+    border: 2px; 
+    background-color: black;
+    height: 2px;
+    margin: 10px;
+ }
+
+ .akun{
+    display: flex; 
+    width: 100%; 
+    align-items: center;
  }
 
 @media screen and (min-width: 450px) {
