--- a/css/SignUp.css
+++ b/css/SignUp.css
@@ -69,7 +69,7 @@ a:link {
     text-align: left;
     width: 80.9%;
     height: auto;
-    background: #D5E6E0;
+    background: #FBFBFB;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 10.9%;
     padding: 20px;
@@ -139,7 +139,7 @@ a:link {
     margin-bottom: 100px;
 }
 
-.Formulir input[type=button]{
+.Formulir button{
     width: 20%;
     padding: 20px;
     font-size: 1.2em;
@@ -147,7 +147,16 @@ a:link {
     background-color: #21dc66;
     border: 1px solid grey;
     color: white;
+    cursor: pointer;
 }
+
+.Formulir input:hover[type=button]{
+  
+    background-color: #17C156;
+
+
+
+]
 
 table {
     font-family: arial, sans-serif;
